@@ -126,10 +126,11 @@ protected function conversion_step1 ($input_file, $intermediate_image)
  */
 protected function conversion_step2 ($intermediate_image, $final_image)
 {
-	// FIXME: mind boggling exercise: why ImageMagick identifies PostScript produced by Mup as having
-	// transparency on Windows, yet otherwise on Linux?
-	// FIXME: 2. more exercise: when is it interpreted as having transparency on Linux too?
-	return parent::conversion_step2 ($intermediate_image, $final_image, true);
+	// A bug involving alpha channel in paletted PNG was fixed in 6.3.9-6;
+	// seems it affects any paletted image and level 1 PostScript too?
+	return parent::conversion_step2 ($intermediate_image, $final_image,
+			version_compare ( $this->imagick_ver, '6.3.9-6', '>=' )
+	);
 }
 
 
