@@ -58,13 +58,19 @@ protected function conversion_step1 ($input_file, $intermediate_image)
  */
 protected function conversion_step2 ($intermediate_image, $final_image)
 {
-	// ImageMagick mistakenly identify all PostScript produced by PMW as
-	// having Letter (8.5"x11") size! Braindead. Without -page option it
-	// just displays incomprehensible error. Perhaps PMW is to be blamed
-	// though, since there is no BoundingBox nor page dimension specified
-	// in PostScript produced by PMW.
-	return parent::conversion_step2 ($intermediate_image,
-		$final_image, true, '-page a3');
+	/*
+	 * ImageMagick mistakenly identify all PostScript produced by PMW as
+	 * having Letter (8.5"x11") size! Braindead. Without -page option it
+	 * just displays incomprehensible error. Perhaps PMW is to be blamed
+	 * though, since there is no BoundingBox nor page dimension specified
+	 * in PostScript produced by PMW.
+	 *
+	 * A bug involving alpha channel in paletted PNG was fixed in 6.3.9-6;
+	 * seems it affects any paletted image and level 1 PostScript too?
+	 */
+	return parent::conversion_step2 ($intermediate_image, $final_image,
+			version_compare ( $this->imagick_ver, '6.3.9-6', '>=' ),
+			'-page a3');
 }
 
 /**
